feat(notification): adapter infrastructure, filtering & adapter-config CRUD
NOTIF-01: Pluggable adapter infrastructure with per-dispatch filtering.

- NotificationAdapter gains getIdentifier()/getAdapterType()
- AdapterRegistry service (lookup/filter by adapter type)
- NotificationDispatchService.dispatch() requires List<AdapterType> targetAdapters
- SeverityTransitionJob passes subscription.getAdapters() to dispatch
- AdapterConfig CRUD (personal + org-scoped) with security
- AdapterType enum: IN_APP, MATTERMOST, SLACK, EMAIL
- Subscription.targetSeverities changed from List<String> to List<Severity>
- Package restructure: notification/core/ + notification/adapter/
- NoOpNotificationAdapter for testing
- Liquibase migration for adapter_config table
- User-facing validation messages